Remove Authroize on Build
